# snap-coin-miner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
