[package]
name = "snap-coin-miner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
chrono = "0.4.42"
config = "0.15.19"
crossbeam = "0.8.4"
futures = "0.3.31"
num-bigint = "0.4.6"
num_cpus = "1.17.0"
rand = "0.9.2"
snap-coin = { version = "3.0.0" }
tokio = "1.48.0"
